# docs/api/openapi.yaml
@@ -46,10 +46,14 @@ security:
 paths:
   /auth/login:
     $ref: paths/auth.yaml#/login
+  /auth/firebase-login:
+    $ref: paths/auth.yaml#/firebaseLogin
   /auth/refresh:
     $ref: paths/auth.yaml#/refresh
   /auth/logout:
     $ref: paths/auth.yaml#/logout
+  /auth/me:
+    $ref: paths/auth.yaml#/me
 
   /farmers:
     $ref: paths/farmers.yaml#/farmers
